# jyablonski_kimball_example

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqruff  CODEOWNERS  Makefile  README.md  dbt_project.yml  jacobs_notes.md  package-lock.yml  packages.yml  pyproject.toml  selectors.yml  tbls.yml  test.yaml
.github/: CODEOWNERS
.github/workflows/: dbt_checkpoint.yml  dbt_doc_coverage.yml  deploy.yml  deploy_test.yml  slim_ci.yml  test.yml
docker/: Dockerfile  docker-compose-local.yml  docker-compose-postgres.yml  postgres_bootstrap.sql  snowflake_bootstrap.sql
erd/: erd_output.md
fides/: dim.yaml
fides/examples/: fides_column_manifest_yaml.py
macros/: env_limit.sql  generate_scd2_model.sql  get_run_date.sql  get_unit_test.sql  store_failures.sql  swap_warehouse.sql
models/: source.yml
models/dim/: customers.sql  dim_customers.sql  dim_customers.yml  dim_customers_scd2_macro.sql  dim_customers_unit_test.yml  dim_financial_accounts.yml  dim_integrations.sql  dim_integrations.yml  dim_payment_types.yml  dim_products.sql  dim_products.yml  dim_stores.sql  dim_stores.yml  dim_stores_scd2_macro.sql  dim_stores_scd2_macro.yml  dim_user_profiles_unified.sql  dim_user_profiles_unified.yml  dim_users_geolocation_scd2.sql  financial_accounts.sql  integrations.sql  payment_types.sql  products.sql  stores.yml
models/ephemeral/: customer_payment_invoice_sum.sql
models/experimental/: countries.sql  countries.yml  customer_changes_agg.sql  ohshit.sql
models/fact/: customer_orders_aggregated.sql  customer_orders_itemized.sql  customer_payment_history.sql  fact_emails.sql  fact_orders_detailed.sql  fact_orders_detailed.yml  fact_orders_external_system.sql  fact_orders_external_system.yml  fact_orders_generalized.sql  fact_orders_generalized.yml  fact_payments.sql  fact_product_prices.yml  orders.sql  orders_detailed.sql  orders_external_system.sql  orders_external_system.yml  orders_generalized.sql  orders_json.yml  payments.sql  product_price_history_scd2.sql  product_prices.sql  product_sales.sql  sales.sql
models/marts/: customer_integration_history_scd2.sql  customer_integration_history_scd2.yml  customer_payments_by_invoice.sql  incremental_pk_tester.sql  incremental_pk_tester_merge_only.sql  incremental_tester.sql  orders_json_tester.sql  orders_json_tester.yml  outstanding_invoices.sql  outstanding_invoices.yml  paid_invoices.sql  paid_invoices.yml  pending_invoices.sql  pending_invoices.yml  product_price_history_scd2.sql  scd2.sql  test_fail.sql  test_success.sql  total_payments_by_customer.sql  total_payments_by_customer.yml  total_sales_by_customer.sql  total_sales_by_customer.yml  v3.sql
models/marts/accounting/: accounting_by_state_agg.sql  accounting_by_state_agg.yml  accounting_by_store_agg.sql  accounting_by_store_agg.yml
models/marts/customer/: customer_integration_history_scd2.sql  customer_integration_history_scd2.yml  customer_payments_by_invoice.md  customer_payments_by_invoice.sql  customer_payments_by_invoice.yml
models/marts/experimental/: backfill_var_test.sql  backfill_var_test.yml  countries.yml  emails_subject_cols.sql  emails_subject_concat.sql  incremental_pk_tester.yml  incremental_pk_tester_merge_only.yml  incremental_tester.sql  incremental_tester.yml  ohshit.md  ohshit.yml  page_sessions_microbatch.sql  page_sessions_microbatch.yml  snowflake_merge_test.sql  snowflake_merge_test.yml
models/marts/finance/: outstanding_invoices.sql  outstanding_invoices.yml  outstanding_invoices_exposure.yml
models/marts/marketing/: customers_to_email.sql  customers_to_email.yml
models/marts/product/: most_popular_products_agg.sql  most_popular_products_agg.yml  most_popular_products_by_store_agg.sql  most_popular_products_by_store_agg.yml
models/quality/: failed_tests.sql
prod_artifacts/: sources.json
profiles/: docker_profiles.yml  profiles.yml
scripts/: dbt_parse.py  dbt_table_relationships_parse.py  dbterd_dbml.py  entrypoint.sh  postgres_wal_streaming.py
seeds/: country_codes.csv  country_codes.yml
snapshots/: payments_snapshot.sql
tbls/: README.md  dbt_stg.alerts_anomaly_detection.md  dbt_stg.alerts_dbt_models.md  dbt_stg.alerts_dbt_source_freshness.md  dbt_stg.alerts_dbt_tests.md  dbt_stg.alerts_schema_changes.md  dbt_stg.anomaly_threshold_sensitivity.md  dbt_stg.countries.md  dbt_stg.country_codes.md  dbt_stg.customer_changes_agg.md  dbt_stg.data_monitoring_metrics.md  dbt_stg.dbt_artifacts_hashes.md  dbt_stg.dbt_columns.md  dbt_stg.dbt_exposures.md  dbt_stg.dbt_invocations.md  dbt_stg.dbt_metrics.md  dbt_stg.dbt_models.md  dbt_stg.dbt_run_results.md  dbt_stg.dbt_seeds.md  dbt_stg.dbt_snapshots.md  dbt_stg.dbt_source_freshness_results.md  dbt_stg.dbt_sources.md  dbt_stg.dbt_tests.md  dbt_stg.elementary_test_results.md  dbt_stg.failed_tests.md  dbt_stg.job_run_results.md  dbt_stg.metadata.md  dbt_stg.metrics_anomaly_score.md  dbt_stg.model_run_results.md  dbt_stg.monitors_runs.md  dbt_stg.ohshit.md  dbt_stg.orders_snapshot.md  dbt_stg.schema_columns_snapshot.md  dbt_stg.seed_run_results.md  dbt_stg.snapshot_run_results.md  dbt_stg.test_result_rows.md  dim.dim_customers.md  dim.dim_financial_accounts.md  dim.dim_integrations.md  dim.dim_payment_types.md  (+39 more)
tests/: payment_type_checks.sql  stores_check_test.sql  test_product_price_validity.sql
