[tool.poetry]
name = "jyablonski-kimball-example"
version = "0.0.1"
description = "Example Kimball Modeling Project"
authors = ["jyablonski9 <jyablonski9@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
elementary-data = "^0.12.1"
dbt-core = "1.9.1"
dbt-postgres = "1.9.0"
dbt-snowflake = "^1.8.3"
dbt-coverage = "^0.3.8"


[tool.poetry.group.dev.dependencies]
sqlfluff = "3.3.0"
sqlfluff-templater-dbt = "3.3.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.sqlfluff.core]
dialect = "postgres"
templater = "dbt"
exclude_rules = ["RF03", "L016", "L026", "L027", "L029", "L032", "L034"]

# L016 - line too long gahbage
# L026 - some dumbass shit about not using table aliases idk bruh
# L027 - i do select a, b instead of foo.a, vee.b - bad habit but excluding for now
# L029 - no sql-reserved keywords as aliases - bad habit but excluding for now
# L032 - no `using` keyword for joins - this is fine imo so fuqqit
# L034 - Select wildcards then simple targets before calculations and aggregates.
#      - this rule can literally break your sql so fuck that

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.identifiers]
extended_capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.functions]
extended_capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.types]
extended_capitalisation_policy = "lower"

[tool.sqlfluff.indentation]
indented_joins = true
