[project]
name = "jyablonski-kimball-example"
version = "0.0.1"
description = "Example Kimball Modeling Project"
authors = [{ name = "jyablonski9", email = "jyablonski9@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "dbt-core==1.9.1",
    "dbt-postgres==1.9.0",
    "dbt-snowflake>=1.8.3,<2",
    "dbt-coverage>=0.3.8,<0.4",
    "dbterd>=1.18.0,<2",
    "dbt-artifacts-parser>=0.8.2,<0.9",
]

[dependency-groups]
dev = [
    "sqlfluff>=3.4.1,<4",
    "sqlfluff-templater-dbt>=3.4.1,<4",
    "ipykernel>=6.29.0,<7",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.sqlfluff.core]
dialect = "postgres"
templater = "dbt"
exclude_rules = ["RF03", "L016", "L026", "L027", "L029", "L032", "L034"]

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true
load_macros_from_path = "./macros"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.identifiers]
extended_capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.functions]
extended_capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.types]
extended_capitalisation_policy = "lower"

[tool.sqlfluff.indentation]
indented_joins = true
allow_implicit_indents = false

[tool.sqlfluff.layout.type.comma]
spacing_before = "touch"
line_position = "trailing"

[tool.sqlfluff.layout.type.where_clause]
keyword_line_position = "alone"

[tool.sqlfluff.layout.type.group_by_clause]
keyword_line_position = "alone"

[tool.sqlfluff.layout.type.order_by_clause]
keyword_line_position = "alone"

# force explicit column references in group by and order by clauses
# like `GROUP BY user_id, customer_id` instead of `GROUP BY 1, 2`
[tool.sqlfluff.rules.ambiguous.column_references]
group_by_and_order_by_style = "explicit"
